package.jsonを先にコピー

--- a/docker/simpleweb/Dockerfile
+++ b/docker/simpleweb/Dockerfile
@@ -6,8 +6,9 @@ WORKDIR /usr/app
 
 # Install some dependencies
 # デバイス内のJSファイルをコンテナにコピー
-COPY ./ ./
+COPY ./package.json ./
 RUN npm install
+COPY ./ ./
 
 # Default command
 CMD ["npm", "start"]
